--- a/src/SCClassicalPlanning.Documentation/wwwroot/index.html
+++ b/src/SCClassicalPlanning.Documentation/wwwroot/index.html
@@ -28,8 +28,8 @@
     </div>
 
     <script src="_framework/blazor.webassembly.js"></script>
-    <link rel="stylesheet" type="text/css" href="google-code-prettify/prettify.css">
-    <script type="text/javascript" src="google-code-prettify/prettify.js"></script>
+    <link rel="stylesheet" type="text/css" href="lib/google-code-prettify/bin/prettify.min.css">
+    <script type="text/javascript" src="lib/google-code-prettify/bin/prettify.min.js"></script>
 </body>
 
 </html>
