docs site: added blazorise & respect system color mode preference

--- a/src/SCClassicalPlanning.Documentation/wwwroot/index.html
+++ b/src/SCClassicalPlanning.Documentation/wwwroot/index.html
@@ -4,15 +4,23 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <link rel="icon" href="img/SCClassicalPlanning-32.png" type="image/png" />
     <title>SCClassicalPlanning</title>
+
     <base href="/" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link href="app.css" rel="stylesheet" />
-    <link href="SCClassicalPlanning.Documentation.styles.css" rel="stylesheet" />
-    <link href="img/SCClassicalPlanning-32.png" rel="icon" type="image/png" />
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="_content/Blazorise/blazorise.css?v=1.7.5.0" />
+    <link rel="stylesheet" href="_content/Blazorise.Bootstrap5/blazorise.bootstrap5.css?v=1.7.5.0" />
+
+    <link rel="stylesheet" href="highlightjs.css" />
+    <link rel="stylesheet" href="app.css" />
+    <link rel="stylesheet" href="SCClassicalPlanning.Documentation.styles.css" />
 </head>
 
 <body>
+    <script src="js/colorModeToggler.js"></script>
+
     <div id="app">
         <div id="loading-placeholder" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); text-align: center">
             <img src="img/SCClassicalPlanning-128.png" alt="SCClassicalPlanning icon" />
@@ -28,46 +36,10 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="lib/highlight.js/highlight.min.js"></script>
 
     <script src="_framework/blazor.webassembly.js" autostart="false"></script>
-
-    <link rel="stylesheet" type="text/css" href="lib/google-code-prettify/bin/prettify.min.css">
-    <script type="text/javascript" src="lib/google-code-prettify/bin/prettify.min.js"></script>
-
-    <script>
-        // Shamelessly nabbed and adapted from https://swharden.com/blog/2022-05-29-blazor-loading-progress/
-        function StartBlazor() {
-            let loadedCount = 0;
-            const resourcesToLoad = [];
-            Blazor.start({
-                loadBootResource:
-                    function (type, filename, defaultUri, integrity) {
-                        if (type == "dotnetjs")
-                            return defaultUri;
-
-                        const fetchResources = fetch(defaultUri, {
-                            cache: 'no-cache',
-                            integrity: integrity
-                        });
-
-                        resourcesToLoad.push(fetchResources);
-
-                        fetchResources.then((r) => {
-                            loadedCount += 1;
-                            if (filename == "blazor.boot.json")
-                                return;
-                            const totalCount = resourcesToLoad.length;
-                            document.getElementById('progressLabel').innerHTML = `Loading,&nbsp;please&nbsp;wait.. (${loadedCount}/${totalCount})`;
-                            document.getElementById('progressDetail').innerText = filename;
-                        });
-
-                        return fetchResources;
-                    }
-            });
-        }
-
-        StartBlazor();
-    </script>
+    <script src="js/startBlazor.js"></script>
 </body>
 
 </html>
