docs site: use css isolation for markdown stuff & embed markdown files in client app

--- a/src/SCClassicalPlanning.Documentation/wwwroot/index.html
+++ b/src/SCClassicalPlanning.Documentation/wwwroot/index.html
@@ -13,7 +13,6 @@
     <link rel="stylesheet" href="_content/Blazorise/blazorise.css?v=1.7.5.0" />
     <link rel="stylesheet" href="_content/Blazorise.Bootstrap5/blazorise.bootstrap5.css?v=1.7.5.0" />
 
-    <link rel="stylesheet" href="highlightjs.css" />
     <link rel="stylesheet" href="app.css" />
     <link rel="stylesheet" href="SCClassicalPlanning.Documentation.styles.css" />
 </head>
@@ -39,7 +38,7 @@
     <script src="lib/highlight.js/highlight.min.js"></script>
 
     <script src="_framework/blazor.webassembly.js" autostart="false"></script>
-    <script src="js/startBlazor.js"></script>
+    <script src="js/startBlazorWithProgressFeedback.js"></script>
 </body>
 
 </html>
