--- a/src/SCClassicalPlanning.Documentation/wwwroot/index.html
+++ b/src/SCClassicalPlanning.Documentation/wwwroot/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="_content/Blazorise/blazorise.css?v=1.7.5.0" />
     <link rel="stylesheet" href="_content/Blazorise.Bootstrap5/blazorise.bootstrap5.css?v=1.7.5.0" />
+    <link rel="stylesheet" href="_content/Blazorise.Icons.Bootstrap/blazorise.icons.bootstrap.css" />
 
     <link rel="stylesheet" href="app.css" />
     <link rel="stylesheet" href="SCClassicalPlanning.Documentation.styles.css" />
